feat: implementado los cambios necesarios en las entidades con imagenes para que las subidas y actualizaciones de la simagenes s eguarden en la carpeta uploads